frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/appPet: "true"
    io.kompose.service: frontend
  name: frontend
spec:
  containers:
  - env:
    - name: FIAP:ProviderAddress
      value: http://providers-api:3001/api/providers/
    - name: FIAP:UserAddress
      value: http://users-api:3000/api/users/
    image: william0503/superapppet-frontend
    name: frontend
    ports:
    - containerPort: 80
    resources: {}
  restartPolicy: OnFailure
status: {}
