users-api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/appPet: "true"
    io.kompose.service: users-api
  name: users-api
spec:
  containers:
  - image: william0503/users-api
    name: users-api
    ports:
    - containerPort: 3000
    resources: {}
  restartPolicy: OnFailure
status: {}
